[gd_scene load_steps=5 format=3 uid="uid://dfk8x4v2b1oam"]

[ext_resource type="Script" path="res://Scripts/door.gd" id="1_abcde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(160, 160)

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 16

[node name="Door" type="StaticBody2D"]
script = ExtResource("1_abcde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -64.0
offset_right = 16.0
offset_bottom = 64.0
color = Color(0.4, 0.2, 0.05, 1)

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("RectangleShape2D_2")

[node name="SafetyArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafetyArea"]
shape = SubResource("RectangleShape2D_1")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -75.0
offset_top = -95.0
offset_right = 75.0
offset_bottom = -70.0
text = "Press E to Interact"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
